--- a/src/Components/Feedback/Feedback.css
+++ b/src/Components/Feedback/Feedback.css
@@ -16,3 +16,42 @@
 /* .feedback FeedbackCard {
     margin: 5%;
 } */
+
+/* @media screen  and (max-width:670px) {
+    
+    .feedback{
+        flex-direction: column;
+    }
+
+    .card-container {
+        width: 100%;
+        margin: 1%;
+    }
+
+       
+} */
+
+@media screen  and (max-width:470px) {
+
+    .feedback{
+        flex-direction: column;
+    }
+
+    .card-container {
+        width: 96%;
+        margin: 2%;
+    }
+
+    .card-content{
+        line-height: 1.8em;
+        padding: 0;
+        font-size: 0.7em;
+    }
+
+    .card-content p{
+        margin: 0.5em;
+    }
+
+
+       
+}
