--- a/src/Components/SingleMovie/popularity.css
+++ b/src/Components/SingleMovie/popularity.css
@@ -1,8 +1,10 @@
 .single-chart {
-    width: 47%;
-    justify-content: space-around ;
-  /*   background:#081C22 */
+  width: 115px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   }
+
   .circle-bg-l {
   /*   stroke: red;
     stroke-width: 10; */
@@ -11,7 +13,7 @@
   
   .circular-chart {
     display: block;
-    margin: 10px auto;
+    /* margin: 10px auto; */
     max-width: 80%;
     max-height: 250px;
   }
@@ -42,6 +44,6 @@
   .percentage {
     fill: #fff;
     font-family: sans-serif;
-    font-size: 0.2em;
+    font-size: 0.6em;
     text-anchor: middle;
   }
