--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -26,7 +26,6 @@
 .center-view .search-bar input{
     padding: 1.5% 0 1.5%;
     width: 80%;
-    /* background: hsl(0deg 100% 95%); */
     font-family: cursive !important;
     font-size: 1.2em;
     outline: none;
@@ -34,6 +33,10 @@
     font-weight: 600;
     border-top-left-radius: 0.5em;
     border-bottom-left-radius: 0.5em;
+    
+}
+.center-view .search-bar input[type='text'] {
+    text-indent: 1em;
 }
 
 .center-view .search-bar input::placeholder{
@@ -48,6 +51,7 @@
     font-size: 1.4rem;
     font-weight: 300;
     letter-spacing: 2px;
+    
 }
 
 .center-view .center-text h2{
@@ -102,5 +106,12 @@
         font-size: 1em;
         outline: none;
         border: none;
+        
     }
+}
+
+.search-bar input[type='text']::placeholder {
+    margin-left: 4em;
+    text-indent: 1em;
+    
 }
