--- a/src/Components/SingleMovie/SingleMovie.css
+++ b/src/Components/SingleMovie/SingleMovie.css
@@ -12,7 +12,7 @@
 }
 
 .primary-section-back {
-    background: url("https://www.themoviedb.org/t/p/w1920_and_h800_multi_faces/dq18nCTTLpy9PmtzZI6Y2yAgdw5.jpg");
+    /* background: url("https://www.themoviedb.org/t/p/w1920_and_h800_multi_faces/dq18nCTTLpy9PmtzZI6Y2yAgdw5.jpg"); */
 
 }
 
