minor css changes

--- a/src/Components/Feedback/FeedbackCard.css
+++ b/src/Components/Feedback/FeedbackCard.css
@@ -27,7 +27,8 @@
       transition: bottom 1s;
       font-family:cursive;
       text-align: justify;
-      width: 78%;
+      width: -webkit-fill-available;
+
       
   }
   
