--- a/src/Components/SingleMovie/SingleMovie.css
+++ b/src/Components/SingleMovie/SingleMovie.css
@@ -17,7 +17,7 @@
 }
 
 .primary-section {
-    width: 100%;
+    width: 98%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -183,4 +183,19 @@
 
 .recommedation{
     width: 100%;
+}
+
+@media screen and (max-width:500px) {
+        
+    .for-user {
+        flex-direction: column;
+    }
+    .gener{
+        flex-wrap: wrap ;
+    }
+    .gener li{
+        margin-top: 0.5em;
+    }
+
+    
 }
