--- a/src/Components/Loader/Loader.css
+++ b/src/Components/Loader/Loader.css
@@ -1,12 +1,16 @@
+.loading {
+  background: black;
+  height: 23em;
+}
+
 .loader{
-    margin: 0 0 2em;
-    height: 100px;
-    width: 20%;
     text-align: center;
     padding: 1em;
+    height: 60%;
     margin: 0 auto 1em;
     display: inline-block;
     vertical-align: top;
+    width: 95%;
   }
   
 
