--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -12,6 +12,7 @@
     backface-visibility: visible;
     flex-direction: column;
     font-family: cursive !important; 
+    padding-bottom: 10%;
 }
 
 .center-view .search-bar{
@@ -71,6 +72,12 @@
     border-radius:0.5em;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.search-bar input[type="submit"]:hover{
+    background: rgb(55, 136, 136);
 }
 /* 
 .center-view .center-text h2::before {
