--- a/src/Components/Feedback/FeedbackCard.css
+++ b/src/Components/Feedback/FeedbackCard.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 30%;
     height: 27em;
+    background: url(https://www.dmarge.com/wp-content/uploads/2021/01/dwayne-the-rock-.jpg);
     color: white;
     border-radius: 1em;
     box-shadow: 1px 5px 10px black;
