--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -6,7 +6,7 @@
     height: 80vh;
     position: relative;
     margin-top: 0em;
-    background: url("../../images/greenland.jpg");
+    /* background: url("../../images/greenland.jpg"); */
     background-position: center;
     background-size: cover;
     backface-visibility: visible;
@@ -66,6 +66,15 @@
     font-weight: 700;
     
 }
+
+.search-suggestion {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
 .search-bar input[type="submit"]{
     width: 20%;
     background: aqua;
@@ -88,6 +97,42 @@
     height: 100%;
 
 } */
+
+
+.suggestion{
+    background:linear-gradient(hsl(0deg 1% 39%),hsl(20 0% 0% / 0.05) 20%,hsl(0 0% 0% / 0.3));
+    width: 56%;
+    margin-right: 14%;
+    border-bottom-right-radius: 1em;
+    border-bottom-left-radius: 1em;
+    border-top-left-radius: 0.3em;
+}
+
+.suggestion ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 3%;
+    font-size: 1.3em;
+    color: white;
+    justify-content: flex-start;
+    text-align: left;
+}
+.suggestion ul  a {
+    width: 100%;
+    color: white;
+    text-decoration: none;
+}
+.suggestion ul  a:hover{
+    padding: 1%;
+    background: rgb(24, 24, 24);
+    border-radius: 0.5em;
+
+}
+.suggestion ul  a li { 
+    padding-top: 1%;
+}
 
 @media screen and (max-width:570px) {
     
@@ -121,4 +166,22 @@
     margin-left: 4em;
     text-indent: 1em;
     
+}
+.partical {
+    position: absolute;
+    background-color: #60736a;
+    background-image: linear-gradient(
+34deg
+, #60736a 0%, #554eb9 33%, #3ee2dd 66%, #86dae8 100%);
+    width: 100%;
+    height: 100%;
+    /* z-index: 999; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.partical div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
