--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -176,18 +176,23 @@
 .partical {
     position: absolute;
     background-color: #60736a;
-    background-image: linear-gradient(
-34deg
-, #60736a 0%, #554eb9 33%, #3ee2dd 66%, #86dae8 100%);
+    background-image: linear-gradient(34deg, #60736a 0%, #554eb9 33%, #3ee2dd 66%, #86dae8 100%);
     width: 100%;
     height: 100%;
-    /* z-index: 999; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .partical div {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.partical canvas {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 100vh;
 }
