--- a/src/Components/NewFeedback/NewFeedback.css
+++ b/src/Components/NewFeedback/NewFeedback.css
@@ -29,12 +29,13 @@
     padding-left: 2%;
 }
 .user-name h1{
-    margin-top: 0;
-    color: #444141;
-    font-size: 2em;
+    margin: 0;
+  color: #444141;
+  font-size: 1.5em;
 }
 .text-content p{
     text-align: justify;
+    margin: 0.4em;
 }
 .icons{
     display: flex;
