--- a/src/Components/Trending/MovieCard.css
+++ b/src/Components/Trending/MovieCard.css
@@ -69,19 +69,35 @@
     padding: 0;
     width: 90%;
   }
-  .container .movie-card .sci li {
+  .container .movie-card .movie-card .content  .sci li {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: white;
     list-style:none;
     margin:5px 20px;
     transform:translateY(0px);
     transition: 1s;  
     opacity:1;
     transition-delay: calc(2s * var(--i));
+
     
+  }
+
+  .container .movie-card .content .sci li p{
+    margin: 0;
+    margin-top: 0.2em;
   }
   
   .container .movie-card:hover .sci li{
-    transform: translateY(40px);
+    /* transform: translateY(40px); */
     opacity:1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: white;
   }
   
   .container .movie-card .sci li a{
