--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -194,5 +194,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 100vh;
+    /* max-width: 100vh; */
 }
