--- a/src/Components/Filter/Filter.css
+++ b/src/Components/Filter/Filter.css
@@ -21,7 +21,7 @@
 }
 .filter-container{    
     font-size: 1em;
-    font-family: cursive;
+    font-family: 'Source Sans Pro', sans-serif;
     padding: 5% 0%;
     width: 100%;
 
