--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     background: #1A1A1A;
     color: rgb(182, 182, 182);
-    font-family: cursive;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .footer ul{
@@ -20,7 +20,7 @@
 
 .footer ul h1 {
     font-size: 2.4em;
-    font-family: cursive;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: 500;
     letter-spacing: 2px;
     margin: 1em 0em 1em 0em;
