--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 1em;
-    font-family: cursive;
+    font-family: 'Source Sans Pro', sans-serif;
     background: linear-gradient(
 196deg
 , #5461e4, #6bc1a1,#9a9a9a00),linear-gradient(
