--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -17,7 +17,7 @@
     background-size: cover;
     backface-visibility: visible;
     flex-direction: column;
-    font-family: cursive !important; 
+    font-family: 'Source Sans Pro', sans-serif !important; 
     padding-bottom: 10%;
 }
 
@@ -33,7 +33,7 @@
 .center-view .search-bar input{
     padding: 1.5% 0 1.5%;
     width: 80%;
-    font-family: cursive !important;
+    font-family: 'Source Sans Pro', sans-serif !important;
     font-size: 1.2em;
     outline: none;
     border: none;
@@ -160,7 +160,7 @@
     .center-view .search-bar input {
         padding: 0.4em;
         width: 80%;
-        font-family: cursive !important;
+        font-family: 'Source Sans Pro', sans-serif !important;
         font-size: 1em;
         outline: none;
         border: none;
