--- a/src/Components/Navbar/Navbarcss.css
+++ b/src/Components/Navbar/Navbarcss.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     width: 100%;
     padding: 0.2em 0em 0.2em 0em;
-    font-family: cursive !important;    
+    font-family: 'Source Sans Pro', sans-serif !important;    
     flex-wrap: wrap;
 }
 .navbar-text img{
@@ -24,7 +24,7 @@
 .heading-text h2{
     font-weight: bolder;
     font-size: 1.5em;
-    font-family: cursive !important;
+    font-family: 'Source Sans Pro', sans-serif !important;
     color: white;
     margin: 0;
     padding: 0
