--- a/src/Components/SingleMovie/SingleMovie.css
+++ b/src/Components/SingleMovie/SingleMovie.css
@@ -31,6 +31,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-left: 2%;
     
 }
 
@@ -154,7 +155,7 @@
     flex-direction: column;
     font-size: 0.6em;
     text-align: justify;
-    font-family: cursive;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .overview .over{
     width: 100%;
