--- a/src/Components/FindMovie/FindMovie.css
+++ b/src/Components/FindMovie/FindMovie.css
@@ -28,17 +28,25 @@
 .next-page ul{
     display: flex;
     text-decoration: none;
-    justify-content: flex-end;
-    width: 65%;
+    justify-content: space-evenly;
+    width: 80%;
     list-style: none;
 }
 
-.next-page ul li{
-    margin-left: 2em;
+.next-page ul li{    
     padding: 1% 2% 1% 2%;
     background: #636765;
     box-shadow: 2px 1px 2px #b7b2b2;
     border-radius: 0.3em;
     cursor: pointer;
+    /* height: 1em;
+    width: 1.5em; */
 
+}
+
+.second-part{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
 }
