--- a/src/Components/WatchList/watch.css
+++ b/src/Components/WatchList/watch.css
@@ -25,6 +25,13 @@
     width: 40%;
 }
 
+.watch-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: #212121;
+    flex-wrap: wrap;
+}
 @media screen and (max-width:570px) {
 
 }
