--- a/src/Components/Trending/MovieCard.css
+++ b/src/Components/Trending/MovieCard.css
@@ -5,7 +5,6 @@
     align-items:center;
     flex-wrap: wrap;
     margin: 1%;
-      
   }
   
   .container .movie-card{
@@ -13,11 +12,12 @@
     width:300px;
     height:400px;
     overflow:hidden;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     border-radius:15px;
     display:flex;
     justify-content:center;
     align-items:center;
+    margin: 1em 0.3em 2em 0.3em;
+    background: chartreuse;
   }
   
   .container .movie-card .content {
