--- a/src/Components/Mainview/Mainview.css
+++ b/src/Components/Mainview/Mainview.css
@@ -1,5 +1,25 @@
+.search-mainview{
+    position: relative;
+
+}
+.partical {
+    position: absolute;
+    background-color: #60736a;
+    background-image: linear-gradient(34deg, #60736a 0%, #554eb9 33%, #3ee2dd 66%, #86dae8 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top:0; 
+    width: 100%;
+    z-index: -22;
+    max-height: 500vh;
+    height: 100%;
+    
+}
+
 .search-bar-section{
     position: relative;
+    background: transparent;
 }
 .primary-section-back {
     width: 100%;
@@ -173,16 +193,7 @@
     text-indent: 1em;
     
 }
-.partical {
-    position: absolute;
-    background-color: #60736a;
-    background-image: linear-gradient(34deg, #60736a 0%, #554eb9 33%, #3ee2dd 66%, #86dae8 100%);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 
 .partical div {
     display: flex;
